# ENPM663-Building-a-Manufacturing-Robot-Software-System

./: README.md
Assignments/RWA 02/: rwa2_spring2025.yaml
Assignments/RWA 03/: rwa3_spring2025.yaml
ariac_final/group1_ariac/: CMakeLists.txt  package.xml
ariac_final/group1_ariac/config/: group1_sensor.yaml
ariac_final/group1_ariac/etc/: readme.txt
ariac_final/group1_ariac/group1_ariac/: bin_detector_interface.py  locator_interface.py  retrieve_orders_interface.py  sensors_interface.py  tray_detector_interface.py
ariac_final/group1_ariac/include/group1_ariac/: group1_ariac.hpp
ariac_final/group1_ariac/script/: bin_detector.py  check_competition_status.py  locator.py  retrieve_orders.py  sensors.py  tray_detector.py
ariac_final/group1_ariac/src/: group1_ariac.cpp
ariac_final/group1_ariac_final/: CMakeLists.txt  package.xml
ariac_final/group1_ariac_final/config/: collision_object_info.yaml  group1_sensor.yaml  moveit_config.yaml  sensors.yaml
ariac_final/group1_ariac_final/group1_ariac_final/: ceiling_grab_interface.py  check_competition_status_interface.py  floor_grab_interface.py
ariac_final/group1_ariac_final/launch/: group1_ariac_final.launch.py
ariac_final/group1_ariac_final/script/: ceiling_grab.py  floor_grab.py
ariac_final/group1_ariac_msgs/: CMakeLists.txt  package.xml
ariac_final/group1_ariac_msgs/msg/: BinPartsPose.msg  BinPartsPoseLot.msg  ConveyorPartsPose.msg  ConveyorPartsPoseLot.msg
